--- a/style.css
+++ b/style.css
@@ -1,3 +1,26 @@
+
+
+#myBtn {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  background-color: grey;
+  color: white;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 60%;
+  transition: background-color 0.5s;
+}
+
+#myBtn:hover {
+  background-color: #555;
+}
+
 .text-1{
     font-family: 'Times New Roman', Times, serif;
     font-size: 2vw;
@@ -30,6 +53,8 @@ body {font-family: Arial, Helvetica, sans-serif;}
   background-color: #555;
   overflow: auto;
   border-radius: 25px;
+  position: sticky;
+  top: 0px;
 }
 
 .navbar a {
@@ -37,7 +62,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
   padding: 12px;
   color: white;
   text-decoration: none;
-  font-size: 17px;
+  font-size: 2vw;
   width: 25%; /* Four links of equal widths */
   text-align: center;
 }
