--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
   color: white;
   text-decoration: none;
   font-size: 2vw;
-  width: 25%; /* Four links of equal widths */
+  width: 20%;
   text-align: center;
 }
 
