--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
   background-color: grey;
   color: white;
   cursor: pointer;
-  padding: 15px;
+  padding: 1%;
   border-radius: 60%;
   transition: background-color 0.5s;
 }
