--- a/style.css
+++ b/style.css
@@ -65,7 +65,9 @@ body {font-family: Arial, Helvetica, sans-serif;}
   text-decoration: none;
   font-size: 2vw;
   width: 20%;
-  text-align: center;
+  text-align: center; 
+  border-radius: 25px;
+  transition: background-color 0.5s;
 }
 
 .navbar a:hover {
